# ChangeLog for net-mail/courier-imap
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-mail/cvs-repo/gentoo-x86/net-mail/courier-imap/ChangeLog,v 1.67 2004/04/27 20:52:20 agriffis Exp $

  27 Apr 2004; Aron Griffis <agriffis@gentoo.org>
  courier-imap-2.1.2-r1.ebuild, courier-imap-2.1.2-r2.ebuild,
  courier-imap-3.0.2-r1.ebuild, courier-imap-3.0.2.ebuild:
  Add inherit eutils

  26 Apr 2004; Aron Griffis <agriffis@gentoo.org>
  courier-imap-2.1.2-r1.ebuild, courier-imap-2.1.2-r2.ebuild,
  courier-imap-3.0.2-r1.ebuild, courier-imap-3.0.2.ebuild:
  Add die following econf for bug 48950

*courier-imap-3.0.2-r1 (23 Apr 2004)

  23 Apr 2004; Robin H. Johnson <robbat2@gentoo.org>
  courier-imap-3.0.2-r1.ebuild, files/courier-imap-3.0.2-disable-fam.diff:
  bug #48838, make it possible to disable fam properly, configure.in patch by
  <robbat2@gentoo.org>

*courier-imap-2.1.2-r2 (19 Apr 2004)

  19 Apr 2004; Robin H. Johnson <robbat2@gentoo.org>
  courier-imap-1.7.3-r1.ebuild, courier-imap-2.1.2-r2.ebuild:
  remove 1.7.3-r1, add new revision of 2.1.2 with QA fixes for bug #48362

  19 Apr 2004; Robin H. Johnson <robbat2@gentoo.org>
  courier-imap-3.0.2.ebuild:
  fix bug #21330 a bit better

  31 Mar 2004; Robin H. Johnson <robbat2@gentoo.org>
  files/courier-imapd-ssl.rc6, files/courier-imapd.rc6,
  files/courier-pop3d-ssl.rc6, files/courier-pop3d.rc6:
  avoid bug #46351 recurring by having init scripts use famd.

  06 Apr 2004; Joshua Brindle <method@gentoo.org>
  courier-imap-2.1.2-r1.ebuild, courier-imap-3.0.2.ebuild:
  added selinux policy to rdepend

  28 Mar 2004; Jochen Maes <sejo@gentoo.org> courier-imap-3.0.2.ebuild:
  courier-imap-3.0.2.ebuild

  26 Mar 2004; Jason Wever <weeve@gentoo.org> courier-imap-3.0.2.ebuild:
  Marked stable on sparc wrt bug #45584.

  26 Mar 2004; Jon Portnoy <avenj@gentoo.org>
  courier-imap-3.0.2.ebuild :
  Stable on AMD64
