@@ -1,32 +1,34 @@
-MD5 fcd3731e24829d77a6533e0734fa65a1 ChangeLog 11252
-MD5 f6566bed6d864254ac84cb8ded6681e1 courier-imap-3.0.2.ebuild 7920
-MD5 ef05d9a0b92d457af4f82e829566c6d4 courier-imap-2.1.2-r2.ebuild 7902
-MD5 35c27f40411f315c0c3c43d70a3e2339 courier-imap-3.0.2-r1.ebuild 8145
+MD5 85284fe01bb3fe973544671e2cd69459 courier-imap-3.0.2-r1.ebuild 8144
+MD5 3368e91ad2b5da2a4a1af1dbb037769d courier-imap-2.1.2-r1.ebuild 7747
+MD5 cb363efa1adb26a68688073a195e92db courier-imap-3.0.2.ebuild 7919
+MD5 5eb71f3eba057864fcc42c17072dbf48 courier-imap-3.0.4.ebuild 8140
+MD5 7159296d30dd5246f418b7de2bd34ad0 courier-imap-2.1.2-r2.ebuild 7901
+MD5 56b295ee799f7b0d038d4ad04e28968f ChangeLog 11427
 MD5 6b964abdc013cf2bb64040e8e33215ae metadata.xml 242
-MD5 ecac80d64dfe3b22ded898ef3b6faa94 courier-imap-2.1.2-r1.ebuild 7748
-MD5 75f9598c5aca89a4aa533beb920c001c files/authdaemond.conf 448
-MD5 56cc308283ae98e263ed4ee6f4be9c58 files/authdaemond.rc6 965
-MD5 3ad8d4fb48e010b1341c7d5eb1728d7c files/courier-imapd-ssl.rc6 1209
-MD5 6277c1c5821e3ec19f8b183a70f86527 files/courier-imapd.rc6 954
-MD5 c08939fe9b4753192b750ea30bdd96c7 files/courier-pop3d-ssl.rc6 1217
-MD5 364b18c8c3c8499ee79c0ac2e4b9c752 files/courier-pop3d.rc6 962
-MD5 60552b53a15c049f8f490d454764315d files/courier-imap-2.1.2-res_query.patch 610
-MD5 dfe2c230fed9f3be8e27d5d0baeef193 files/courier-imap-3.0.2-db40vs41.patch 585
-MD5 de1f0b8685ecebe3d859167530f53e84 files/digest-courier-imap-2.1.2-r2 72
-MD5 9626da27b0e11f495ea062e6166e11d3 files/gentoo-imapd-ssl.rc 1013
-MD5 e448df5fdbc088132766b33d27f27073 files/gentoo-imapd.rc 1006
-MD5 a2d52d98e3f5b3241e1ed40943d5a4a8 files/gentoo-pop3d-ssl.rc 989
-MD5 70a999ccc2bc13e7df65b72959fa6f7d files/gentoo-pop3d.rc 997
-MD5 40deca440b71ed8d78e39968fb5a30e9 files/mkimapdcert 996
-MD5 7b677e761c000af45fa7a37635b0c5c8 files/mkpop3dcert 996
-MD5 ce975bfaa13118f7fcc463f2e0486277 files/courier-imap-3.0.2-removerpm.patch 4264
-MD5 d56218342e6b7d9e7aec913b9d44de87 files/digest-courier-imap-3.0.2 72
-MD5 73fffd635f45ec99ecf6a45a9d0e4516 files/courier-imap-3.0.2-disable-fam.diff 1996
-MD5 d56218342e6b7d9e7aec913b9d44de87 files/digest-courier-imap-3.0.2-r1 72
-MD5 a949b3b821df42c3cfee300c25a53750 files/gentoo-imapd-1.7.3-r1.rc 1027
-MD5 58631496675a58dbb19ccd058088c6e1 files/gentoo-imapd-ssl-1.7.3-r1.rc 1034
 MD5 f959e38175d1fd8f8e7a977a14f7265f files/gentoo-pop3d-1.7.3-r1.rc 1018
-MD5 3dd72120d20476368b64811318e0b721 files/gentoo-pop3d-ssl-1.7.3-r1.rc 1010
 MD5 ff6234859377e6e830592de36bc84797 files/courier-imap-2.1.1-db40vs41.patch 559
-MD5 de1f0b8685ecebe3d859167530f53e84 files/digest-courier-imap-2.1.2-r1 72
+MD5 e448df5fdbc088132766b33d27f27073 files/gentoo-imapd.rc 1006
+MD5 656c056a87579f0a1fa2baa4f8bfb705 files/courier-imapd-ssl.rc6 1208
+MD5 5e18b59b0057b23a2dc94dab487b1c29 files/courier-imapd.rc6 953
+MD5 40deca440b71ed8d78e39968fb5a30e9 files/mkimapdcert 996
+MD5 3dd72120d20476368b64811318e0b721 files/gentoo-pop3d-ssl-1.7.3-r1.rc 1010
+MD5 60552b53a15c049f8f490d454764315d files/courier-imap-2.1.2-res_query.patch 610
+MD5 a2d52d98e3f5b3241e1ed40943d5a4a8 files/gentoo-pop3d-ssl.rc 989
 MD5 8518e782ded83266586160919806ec06 files/courier-imap-2.1.2-removerpm.patch 4308
+MD5 ce975bfaa13118f7fcc463f2e0486277 files/courier-imap-3.0.2-removerpm.patch 4264
+MD5 34fd568907a3ac25a568218739bfdc98 files/authdaemond.conf 447
+MD5 58631496675a58dbb19ccd058088c6e1 files/gentoo-imapd-ssl-1.7.3-r1.rc 1034
+MD5 d56218342e6b7d9e7aec913b9d44de87 files/digest-courier-imap-3.0.2-r1 72
+MD5 e7896a8a408e549c618fb0d97db414b8 files/courier-pop3d-ssl.rc6 1216
+MD5 73fffd635f45ec99ecf6a45a9d0e4516 files/courier-imap-3.0.2-disable-fam.diff 1996
+MD5 dfe2c230fed9f3be8e27d5d0baeef193 files/courier-imap-3.0.2-db40vs41.patch 585
+MD5 d56218342e6b7d9e7aec913b9d44de87 files/digest-courier-imap-3.0.2 72
+MD5 ccbd15ff6786ce62a52455ec5f02233e files/digest-courier-imap-3.0.4 72
+MD5 a949b3b821df42c3cfee300c25a53750 files/gentoo-imapd-1.7.3-r1.rc 1027
+MD5 9626da27b0e11f495ea062e6166e11d3 files/gentoo-imapd-ssl.rc 1013
+MD5 70a999ccc2bc13e7df65b72959fa6f7d files/gentoo-pop3d.rc 997
+MD5 de1f0b8685ecebe3d859167530f53e84 files/digest-courier-imap-2.1.2-r1 72
+MD5 de1f0b8685ecebe3d859167530f53e84 files/digest-courier-imap-2.1.2-r2 72
+MD5 bd4b555f9ce4c637f4d683182b596cdc files/authdaemond.rc6 964
+MD5 550901e019a6aab49111f0960237d419 files/courier-pop3d.rc6 961
+MD5 7b677e761c000af45fa7a37635b0c5c8 files/mkpop3dcert 996
