@@ -1,0 +1,1 @@
+MD5 a98e8a0c6fd05636c87267df882592a3 courier-imap-3.0.4.tar.bz2 1641551
