@@ -1,6 +1,12 @@
 # ChangeLog for net-mail/courier-imap
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-mail/cvs-repo/gentoo-x86/net-mail/courier-imap/ChangeLog,v 1.67 2004/04/27 20:52:20 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-mail/cvs-repo/gentoo-x86/net-mail/courier-imap/ChangeLog,v 1.68 2004/05/18 01:33:45 robbat2 Exp $
+
+*courier-imap-3.0.4 (17 May 2004)
+
+  17 May 2004; Robin H. Johnson <robbat2@gentoo.org>
+  courier-imap-3.0.4.ebuild:
+  version bump, bug #51306. severe problem found in 3.0.2.
 
   27 Apr 2004; Aron Griffis <agriffis@gentoo.org>
   courier-imap-2.1.2-r1.ebuild, courier-imap-2.1.2-r2.ebuild,
